@@ -904,6 +904,7 @@ indicar que no s'hauria d'utilitzar cap passarel·la.
 # per a instal·lar remotament mitjançant SSH. Açò només té sentit si voleu
 # continuar amb la instal·lació de forma manual.
 #d-i anna/choose_modules string network-console
+#d-i network-console/authorized_keys_url string http://10.0.0.1/openssh-key
 #d-i network-console/password password r00tme
 #d-i network-console/password-again password r00tme
 </screen></informalexample>
