@@ -955,6 +955,7 @@ což znamená, že se brána nemá použít vůbec.
 # Toto přednastavení má smysl pouze pokud plánujete dokončit
 # instalaci ručně.
 #d-i anna/choose_modules string network-console
+#d-i network-console/authorized_keys_url string http://10.0.0.1/openssh-key
 #d-i network-console/password password r00tme
 #d-i network-console/password-again password r00tme
 </screen></informalexample>
