@@ -973,6 +973,7 @@ soll.
 # macht nur Sinn, wenn Sie vorhaben, den verbleibenden Rest der Installation
 # manuell durchzuführen.
 #d-i anna/choose_modules string network-console
+#d-i network-console/authorized_keys_url string http://10.0.0.1/openssh-key
 #d-i network-console/password password r00tme
 #d-i network-console/password-again password r00tme
 </screen></informalexample>
