@@ -871,6 +871,7 @@ de passerelle, vous pouvez positionner cette variable à <quote>none</quote>.
 # par SSH, vous pouvez vous servir des commandes suivantes. Elles n'ont de sens que si
 # vous avez l'intention de poursuivre l'installation <quote>manuellement</quote>.
 #d-i anna/choose_modules string network-console
+#d-i network-console/authorized_keys_url string http://10.0.0.1/openssh-key
 #d-i network-console/password password r00tme
 #d-i network-console/password-again password r00tme
 </screen></informalexample>
