@@ -1640,6 +1640,7 @@ indicare che non deve essere usato alcun gateway.
 # network-console, usare le seguenti impostazioni. Questo ha senso se si
 # intende effettuare il resto dell'installazione manualmente.
 #d-i anna/choose_modules string network-console
+#d-i network-console/authorized_keys_url string http://10.0.0.1/openssh-key
 #d-i network-console/password password r00tme
 #d-i network-console/password-again password r00tme
 </screen></informalexample>
