@@ -880,6 +880,7 @@ especial, você pode definir <classname>netcfg/get_gateway</classname> como
 # component for remote installation over SSH. This only makes sense if you
 # intend to perform the remainder of the installation manually.
 #d-i anna/choose_modules string network-console
+#d-i network-console/authorized_keys_url string http://10.0.0.1/openssh-key
 #d-i network-console/password password r00tme
 #d-i network-console/password-again password r00tme
 </screen></informalexample>
