@@ -1,6 +1,8 @@
 installation-guide (20120827) UNRELEASED; urgency=low
 
   * debian/rules: Fix suite name.
+  * preseed: Add authorized_keys url preseed example, thanks Charles Plessy
+    for the patch. Closes: #684629.
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 26 Aug 2012 16:47:22 +0200
 
